<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorAccent">


  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="52dp"
    android:text="@string/button_signup"
    android:textColor="@color/colorPrimary"
    android:textSize="50dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/signup_username"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="14dp"
    android:ems="10"
    android:hint="@string/hint_username"
    android:textColorHint="@color/colorPrimary"
    android:textColor="@color/colorPrimary"
    android:inputType="textEmailAddress"
    android:ellipsize="start"
    android:gravity="center_horizontal"
    app:layout_constraintBottom_toTopOf="@+id/signup_password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent" />

  <EditText
    android:id="@+id/signup_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="1dp"
    android:layout_marginTop="260dp"
    android:ems="10"
    android:hint="@string/hint_password"
    android:textColorHint="@color/colorPrimary"
    android:textColor="@color/colorPrimary"
    android:inputType="textPassword"
    android:ellipsize="start"
    android:gravity="center_horizontal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.505"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/btn_signup"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginBottom="106dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="109dp"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:stateListAnimator="@null"
    android:text="@string/button_signup"
    android:textColor="@color/colorPrimary"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/signup_password"
    app:layout_constraintVertical_bias="0.0" />

  <Button
    android:id="@+id/btn_goto_login"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_marginBottom="32dp"
    android:layout_marginEnd="16dp"
    android:layout_marginStart="16dp"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="8dp"
    android:paddingTop="8dp"
    android:stateListAnimator="@null"
    android:text="@string/button_login"
    android:textColor="@color/colorPrimary"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>